# linux-camera-background

./: LICENSE  README.md  bg.cpp  bg.py  install.sh  meson.build  options.txt  requirements.txt
